<resources>
   <string name="app_name">Mom &amp; Baby Care</string>
   
   <string name="title_activity_welcome">WelcomeActivity</string>
   <string name="dummy_button">Dummy Button</string>
   <string name="dummy_content">DUMMY\nCONTENT</string>
   <string name="title_activity_dash_board_mom">DashBoardMomActivity</string>
   <string name="title_activity_chat_doctor">Chat with Doctor</string>
   
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
   
   <string name="action_settings">Settings</string>
   <string name="dob">Date of Birth: </string>
   <string name="blood_group">Blood Group: </string>
   <string name="weight">Weight: </string>
   <string name="height">Height: </string>
   <string name="new_mother">New Mother</string>
   <string name="pregnent_woman">Pregnent Woman</string>
   <string name="name">Name: </string>
   <string name="guardian_s_mobile_no">Guardian\'s Mobile No: </string>
   <string name="pregnency_period">Pregnency Period: </string>
   <string name="save">Save</string>
   <string name="health_tips">Health Tips</string>
   <string name="emergencies">Emergencies</string>
   <string name="create_user">Create User</string>
   <string name="location">Location</string>
   <string name="search">Search</string>
   <string name="list_of_profile">List Of Profile</string>
   <string name="gender">Gender:</string>
   <string name="age">Age: </string>
   
   <!-- TODO: Remove or change this placeholder text -->
   <string name="value">Value</string>
   <string name="remarks">Remarks</string>
   
   <string name="icon">Icon</string>
   <string name="edit">Edit</string>
   <string name="delete">Delete</string>
   <string name="photo">Photo</string>
   <string name="Diary_VoiceNote">Voice Note</string>
   <string name="Diary_Record">Add Voice Note</string>
   <string name="Diary_Notes">Notes</string>
   <string name="Diary_Date">Date</string>
   <string name="add_photo">Add Photo</string>
   <string name="Diary_Done">Done</string>
   <string name="Diary_Cancel">Cancel</string>
   <string name="Diary_Photo">Photo</string>
   <string name="Diary_Create">Take a picture</string>
   <string name="Diary_Delete">Delete picture</string>
   
   <!-- Confirmation dialogs -->
   <string name="dlg_delete_diary_entry">Delete Entry</string>
   <string name="dlg_prompt">Are you sure?</string>
   <string name="dlg_yes">Yes</string>
   <string name="dlg_no">No</string>
   <string name="note">Need Help</string>
   <string name="title_activity_dash_board_child">Child Profile</string>
   
   <!-- TODO: Remove or change this placeholder text -->
   <string name="mother_s_name">Mother\'s Name</string>
   <string name="login_text">Already have an account? Log in</string>
   <string name="signup"><![CDATA[Sign up for MoM & Baby Care]]></string>
   <string name="appName">MOM &amp; BABY CARE</string>
   <string name="title">Share knowledge Save lives</string>
   <string name="logo">Logo</string>

</resources>
