<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="80dp"
   android:orientation="horizontal">

   <CheckBox
      android:id="@+id/checkupCheckBox"
      android:gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

   <TextView
      android:id="@+id/nameTV"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:gravity="center"
      android:hint="@string/name"
      android:textColor="@color/white_70_transparent"/>

   <EditText
      android:id="@+id/valueEt"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight=".5"
      android:gravity="center"
      android:textAlignment="center"
      android:hint="@string/value"
      android:textColor="@color/white_70_transparent"/>

   <EditText
      android:id="@+id/remarksEt"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:textAlignment="center"
      android:hint="@string/remarks"
      android:textColor="@color/white_70_transparent"/>
</LinearLayout>