<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/activity_main"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="#787878"
   android:animateLayoutChanges="false"
   android:animationCache="false"
   android:transitionGroup="false"
   android:baselineAligned="false"
   android:orientation="vertical">
   
   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="80"
      android:orientation="vertical"
      android:gravity="center">
      
      <ImageView
         android:id="@+id/logoImg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/logo"
         android:contentDescription="@string/logo"/>
      
      <TextView
         android:id="@+id/appNameTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/appName"
         android:gravity="center"
         android:textColor="@color/white_70_transparent"
         android:textSize="28sp"
         />
      
      <TextView
         android:id="@+id/titleTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/title"
         android:textColor="@color/white_70_transparent"
         android:gravity="center"
         android:textSize="22sp"/>
   
      <TextView
         android:id="@+id/signupBtn"
         android:onClick="signup"
         android:text="@string/signup"
         android:textAllCaps="false"
         android:layout_width="fill_parent"
         android:layout_height="48.0dip"
         android:background="@drawable/button_border"
         android:gravity="center"
         android:layout_marginLeft="28.0dip"
         android:layout_marginRight="28.0dip"
         android:textColor="@color/white_70_transparent"
         android:layout_marginTop="72.0dip"
         android:layout_marginBottom="15.0dip"
         android:textSize="16sp"
         android:textStyle="bold"/>
      
   </LinearLayout>
   
   <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_gravity="bottom"
      android:gravity="bottom"
      android:layout_height="0dp"
      android:layout_weight="20">
      
      <include layout="@layout/login_footer"/>
      <!--<TextView
         android:id="@+id/loginTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login_text"
         android:gravity="center"
         android:textSize="18sp"
         android:textColor="#000FFF"
         android:onClick="loginNew"
         android:layout_marginBottom="16dp"/>-->
   </LinearLayout>
</LinearLayout>