<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/checkupLayout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".fragments.CheckupMomRecyclerViewFragment">

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".3"
         android:textColor="@color/white_70_transparent"/>

      <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textColor="@color/white_70_transparent"
         android:gravity="center_horizontal"
         android:text="@string/name"/>

      <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:gravity="center_horizontal"
         android:text="@string/value"
         android:textColor="@color/white_70_transparent"/>

      <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_horizontal"
         android:text="@string/remarks"
         android:textColor="@color/white_70_transparent"/>
   </LinearLayout>

   <android.support.v7.widget.RecyclerView
      android:id="@+id/checkupLv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="17dp"
      android:animationCache="false"
      android:scrollbars="vertical"/>


   <ProgressBar
      android:id="@+id/pbbarProfileCheckup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"/>

</FrameLayout>
