<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/light_light_grey"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!-- Date -->
            <EditText
                android:id="@+id/diary_date"
                android:hint="@string/Diary_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edit_input_style"
                android:focusable="false"
                android:inputType="date"
                android:onClick="datePicker"
                />
            <!--  Notes -->
            <EditText
                android:id="@+id/diary_notes"
                android:hint="@string/Diary_Notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edit_input_style"
                android:inputType="textCapSentences|textMultiLine"
                />
            <!--  Warning -->

            <TextView
                android:id="@+id/diary_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edit_warning_style"
                android:padding="@dimen/activity_item_padding"
                android:paddingLeft="@dimen/event_activity_horizontal_margin"
                android:paddingRight="@dimen/event_activity_horizontal_margin"
                />
            <!--
            Audio area contains three layouts, only one visible at a time
            -->
            <!--  Audio area - not recording, no previous recording -->
            <LinearLayout
                android:id="@+id/audio_area_none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                >
                <!-- Grey microphone -->
                <ImageButton
                    android:id="@+id/audio_record_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/edit_button_style"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_microphone"
                    />
                <!--  "Add Voice Note" -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Diary_Record"
                    style="@style/edit_photo_style"
                    />
            </LinearLayout>
            <!--  Audio area - recording -->
            <LinearLayout
                android:id="@+id/audio_area_recording"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <!--  Image alternating between red and grey microphone -->
                <ImageView
                    android:id="@+id/recording_in_progress"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/recording_in_progress"
                    android:layout_gravity="center_horizontal"
                    />
                <!-- "Recording"-->
                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer"
                    android:textSize="24sp"
                    style="@style/edit_photo_style"
                    android:layout_gravity="center_horizontal"
                    />
                <!-- Done and Cancel buttons -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    >
                    <Button
                        android:id="@+id/audio_record_done"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/audio_recording_button_horizontal_margin"
                        android:background="@android:color/transparent"
                        android:text="@string/Diary_Done"
                        />
                    <Button
                        android:id="@+id/audio_record_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/audio_recording_button_horizontal_margin"
                        android:background="@android:color/transparent"
                        android:text="@string/Diary_Cancel"
                        />
                </RelativeLayout>
            </LinearLayout>
            <!--  Audio area - finished -->
            <LinearLayout
                android:id="@+id/audio_area_finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                style="@style/edit_input_style"
                android:visibility="gone"
                >
                <!-- Audio delete button -->
                <ImageButton
                    android:id="@+id/audio_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    style="@style/edit_button_style"
                    android:src="@drawable/ic_delete_selector"
                    android:padding="@dimen/activity_item_padding"
                    />
                <!-- Audio player -->
                <include layout="@layout/audio_player"/>
            </LinearLayout>
            <!--
            Photo area
            -->
            <!-- Photo delete button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/diary_group_top_margin"
                android:paddingLeft="@dimen/event_activity_horizontal_margin"
                android:paddingRight="@dimen/event_activity_horizontal_margin"

                >
                <ImageButton
                    android:id="@+id/diary_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    style="@style/edit_button_style"
                    android:src="@drawable/ic_delete_selector"
                    android:contentDescription="@string/Diary_Delete"
                    android:padding="@dimen/activity_item_padding"
                    />
                <!-- Photo -->
                <ImageView
                    android:id="@+id/diary_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/Diary_Photo"
                    android:padding="@dimen/activity_item_padding"
                    />
                <!-- Camera icon -->
                <ImageButton
                    android:id="@+id/diary_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/edit_button_style"
                    android:src="@drawable/ic_camera_selector"
                    android:contentDescription="@string/Diary_Create"
                    />
                <!--  Camera text -->
                <TextView
                    android:id="@+id/diary_create_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_photo"
                    style="@style/edit_photo_style"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
